IE fix for single confirmation alignment, Refs. #341

--- a/ui/static/ie.css
+++ b/ui/static/ie.css
@@ -114,7 +114,7 @@ div.image {
 }
 
 div.confirm_single {
-    margin-right: -71px;
+    margin-right: -73px;
 }
 
 div.action_error {
